Handle commented PlantUml source properly.